[metadata]
name = tbutilslib
description = Trading Bot Utilities Library
long_description = file: README.md, ChangeLog
author = Abhishake Gupta
author_email = letspython3.x@gmail.com
maintainer = LetsPython3.x
maintainer_email = letspython3.x@gmail.com
url = https://github.com/letspython3x/tbutilslib
keywords = TradingBot, letspython, trading, flask, restful
classifiers =
    License :: N/A :: N/A
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires =
    blinker==1.4
    dateutils
    elasticsearch==7.9.1
    Flask==2.0.1
    flask-apispec==0.11.0
    Flask-Cors==3.0.10
    flask-mongoengine==1.0.0
    Flask-RESTful==0.3.9
    flask-mongoengine
    Flask-WTF==0.15.1
    marshmallow==3.13.0
    marshmallow-mongoengine==0.9.1
    MarkupSafe==2.0.1
    pytz==2021.1
    pymongo==3.12.0
    six==1.16.0
    Werkzeug==2.0.1
    WTForms==2.3.3
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[tool:wheel]
universal = 1

[flake8]
exclude =
    venv,
    .tox,
    .git,
    __pycache__,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
max-line-length = 80

[tox:tox]
envlist = py38,unittest,lint

[testenv]
basepython=python3.8
deps =
    ipython
    pylint
    pytest
    pytest-cov
    pytest-xdist
    flake8
    flake8-docstrings

#testenv:unittest]
#ommands=
#   pytest -v -s -n auto -l --cov=bsapilib --cov-report term-missing --cov-report xml --no-cov-on-fail tests/unit

[testenv:lint]
commands=
    flake8 src/tbutilslib
    pylint src/tbutilslib
